--- a/beznal.html
+++ b/beznal.html
@@ -14,7 +14,7 @@ padding:20px;
 margin:0;
 }
 
-/* кнопка назад */
+/* маленькая кнопка назад */
 .back-button{
 position:fixed;
 top:15px;
@@ -23,10 +23,10 @@ z-index:9999;
 background:#000;
 color:#fff;
 border:none;
-padding:10px 16px;
-border-radius:8px;
+padding:8px 14px;
+border-radius:6px;
 cursor:pointer;
-font-size:14px;
+font-size:13px;
 opacity:.9;
 }
 
@@ -34,6 +34,7 @@ opacity:.9;
 opacity:1;
 }
 
+/* контейнер */
 .container{
 max-width:900px;
 width:100%;
@@ -87,12 +88,12 @@ font-weight:bold;
 font-size:16px;
 }
 
-/* кнопки */
+/* кнопки (основные остаются широкими) */
 .buttons{
 margin-top:20px;
 }
 
-button{
+.buttons button{
 width:100%;
 padding:12px;
 margin-bottom:10px;
@@ -104,14 +105,11 @@ font-size:16px;
 cursor:pointer;
 }
 
-button:hover{
+.buttons button:hover{
 opacity:.9;
 }
 
-/* -------------------- */
-/* МОБИЛЬНАЯ АДАПТАЦИЯ */
-/* -------------------- */
-
+/* мобильная адаптация */
 @media (max-width:768px){
 
 body{
@@ -131,7 +129,7 @@ h2{
 font-size:18px;
 }
 
-button{
+.buttons button{
 font-size:14px;
 padding:10px;
 }
@@ -231,7 +229,7 @@ border:none;
 document.getElementById("date").innerText =
 new Date().toLocaleDateString("ru-RU");
 
-/* номер счета 0-20 */
+/* номер счета */
 document.getElementById("invoice-number").innerText =
 Math.floor(Math.random()*21);
 
