--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ font-size:13px;
 <!-- Калькулятор 3 -->
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-<div class="subtitle">:contentReference[oaicite:0]{index=0}</div>
+<div class="subtitle">СБЕРБАНК</div>
 <div class="hint">Введите общую сумму чека и нажмите рассчитать</div>
 <input type="number" class="input sum">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
@@ -329,3 +329,4 @@ if(e.key==="Enter") btn.click();
 
 </body>
 </html>
+
