--- a/index.html
+++ b/index.html
@@ -3,23 +3,104 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Калькулятор рассрочки</title>
+<title>Auto-Style | Панель менеджера</title>
 
 <style>
 
-*{
-box-sizing:border-box;
-}
+*{box-sizing:border-box;}
 
 body{
-font-family: Arial, sans-serif;
-background:#f5f6f8;
+font-family:Arial, sans-serif;
 margin:0;
-padding:20px;
+background:#f5f6f8;
 overflow-x:hidden;
 }
 
-/* ---------- ШАПКА ---------- */
+/* ====== СТРАНИЦА ВХОДА ====== */
+
+.login-screen{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100vh;
+background:linear-gradient(135deg,#1b5e20,#000);
+display:flex;
+justify-content:center;
+align-items:center;
+padding:20px;
+z-index:9999;
+}
+
+.login-box{
+background:#fff;
+padding:30px 25px;
+border-radius:12px;
+width:100%;
+max-width:380px;
+text-align:center;
+box-shadow:0 15px 40px rgba(0,0,0,.35);
+animation:fadeIn .4s ease;
+}
+
+.login-logo{
+font-size:32px;
+font-weight:bold;
+margin-bottom:10px;
+}
+
+.green{color:#2e7d32;}
+.black{color:#000;}
+
+.login-subtitle{
+color:#555;
+margin-bottom:20px;
+}
+
+.login-input{
+width:100%;
+padding:12px;
+font-size:16px;
+border:1px solid #ccc;
+border-radius:6px;
+margin-bottom:15px;
+}
+
+.login-input:focus{
+outline:none;
+border-color:#2e7d32;
+box-shadow:0 0 6px rgba(46,125,50,.4);
+}
+
+.login-btn{
+width:100%;
+padding:12px;
+font-size:16px;
+border:none;
+border-radius:6px;
+cursor:pointer;
+color:white;
+background:linear-gradient(to right,#43a047,#1b5e20);
+transition:.2s;
+}
+
+.login-btn:hover{opacity:.9;}
+.login-btn:active{transform:scale(.98);}
+
+.error-msg{
+color:#d32f2f;
+font-size:14px;
+margin-top:10px;
+}
+
+@keyframes fadeIn{
+from{opacity:0;transform:translateY(10px);}
+to{opacity:1;transform:translateY(0);}
+}
+
+/* ====== ОСНОВНОЙ САЙТ ====== */
+
+#mainContent{display:none;padding:20px;}
 
 .header{
 background:white;
@@ -36,9 +117,6 @@ font-weight:bold;
 letter-spacing:1px;
 }
 
-.logo .green{color:#2e7d32;}
-.logo .black{color:#000;}
-
 .manager-panel{
 margin-top:8px;
 font-size:14px;
@@ -47,13 +125,10 @@ border-top:1px solid #eee;
 padding-top:8px;
 }
 
-/* ---------- КАЛЬКУЛЯТОРЫ ---------- */
-
 .wrapper{
 display:flex;
 gap:20px;
 flex-wrap:wrap;
-width:100%;
 }
 
 .calculator{
@@ -62,27 +137,11 @@ border-radius:6px;
 padding:20px;
 box-shadow:0 2px 6px rgba(0,0,0,0.1);
 flex:1 1 300px;
-width:100%;
 }
 
-/* текст */
-.title{
-font-size:20px;
-font-weight:bold;
-}
+.title{font-size:20px;font-weight:bold;}
+.subtitle{color:#d32f2f;font-weight:bold;margin-bottom:15px;}
 
-.subtitle{
-color:#d32f2f;
-font-weight:bold;
-margin-bottom:15px;
-}
-
-.hint{
-margin-bottom:10px;
-color:#555;
-}
-
-/* input */
 .input{
 width:100%;
 padding:10px;
@@ -92,7 +151,6 @@ border:1px solid #ccc;
 border-radius:4px;
 }
 
-/* кнопки */
 .btn{
 width:100%;
 color:white;
@@ -106,25 +164,8 @@ transition:.2s;
 }
 
 .btn:hover{opacity:.9;}
-.btn:active{transform:scale(.98);}
+.btn-calc{background:linear-gradient(to right,#1976d2,#0d47a1);}
 
-.btn-calc{
-background:linear-gradient(to right,#1976d2,#0d47a1);
-}
-
-.btn-non-cash{
-background:linear-gradient(to right,#43a047,#2e7d32);
-}
-
-.btn-close-shift{
-background:linear-gradient(to right,#f57c00,#e65100);
-}
-
-.btn-discount{
-background:linear-gradient(to right,#8e24aa,#6a1b9a);
-}
-
-/* таблица */
 table{
 width:100%;
 border-collapse:collapse;
@@ -145,83 +186,47 @@ border-bottom:1px solid #eee;
 .coef{color:#555;}
 .result{font-weight:bold;}
 
-/* нижние кнопки */
-.bottom-buttons{
-width:100%;
-margin-top:20px;
-display:flex;
-gap:20px;
-flex-wrap:wrap;
-}
-
-.bottom-buttons .btn{
-flex:1 1 250px;
-}
-
-/* ---------- МОБИЛЬНАЯ ФИКСАЦИЯ ---------- */
-
-@media (max-width:768px){
-
-body{
-padding:10px;
-}
-
-.wrapper{
-gap:12px;
-}
-
-.calculator{
-width:100%;
-padding:15px;
-}
-
-.logo{
-font-size:24px;
-}
-
-.title{
-font-size:18px;
-}
-
-table{
-font-size:13px;
-}
-
-.btn{
-padding:10px;
-font-size:15px;
-}
-
+@media(max-width:768px){
+.wrapper{gap:12px;}
+.logo{font-size:24px;}
 }
 
 </style>
 </head>
 <body>
 
-<!-- ШАПКА -->
-<div class="header">
+<!-- ===== ВХОД ===== -->
+<div id="loginScreen" class="login-screen">
+<div class="login-box">
+<div class="login-logo">
+<span class="green">A</span><span class="black">uto-</span>
+<span class="green">S</span><span class="black">tyle</span>
+</div>
+<div class="login-subtitle">Вход в панель менеджера</div>
+<input type="password" id="passwordInput" placeholder="Введите пароль" class="login-input">
+<button id="loginBtn" class="login-btn">ВОЙТИ</button>
+<div id="errorMsg" class="error-msg"></div>
+</div>
+</div>
 
+<!-- ===== ОСНОВНОЙ КОНТЕНТ ===== -->
+<div id="mainContent">
+
+<div class="header">
 <div class="logo">
 <span class="green">A</span><span class="black">uto-</span>
 <span class="green">S</span><span class="black">tyle</span>
 </div>
-
-<div class="manager-panel">
-Панель менеджера
-</div>
-
+<div class="manager-panel">Панель менеджера</div>
 </div>
 
 <div class="wrapper">
 
-<!-- Калькулятор 1 -->
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">АГРОПРОМБАНК</div>
-<div class="hint">Введите общую сумму чека</div>
-<input type="number" class="input sum">
+<input type="number" class="input sum" placeholder="Введите сумму">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
-
 <table>
 <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
 <tr><td>АПБ 3</td><td class="coef">0.955</td><td class="result"></td></tr>
@@ -231,81 +236,41 @@ font-size:15px;
 </table>
 </div>
 
-<!-- Калькулятор 2 -->
-<div class="calculator">
-<div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-<div class="subtitle">ЭКСИМБАНК</div>
-<input type="number" class="input sum">
-<button class="btn btn-calc">РАССЧИТАТЬ</button>
-
-<table>
-<tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
-<tr><td>3 мес</td><td class="coef">0.955</td><td class="result"></td></tr>
-<tr><td>6 мес</td><td class="coef">0.93</td><td class="result"></td></tr>
-<tr><td>9 мес</td><td class="coef">0.90</td><td class="result"></td></tr>
-<tr><td>12 мес</td><td class="coef">0.886</td><td class="result"></td></tr>
-</table>
 </div>
-
-<!-- Калькулятор 3 -->
-<div class="calculator">
-<div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-<div class="subtitle">СБЕРБАНК</div>
-<input type="number" class="input sum">
-<button class="btn btn-calc">РАССЧИТАТЬ</button>
-
-<table>
-<tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
-<tr><td>3 мес</td><td class="coef">0.96</td><td class="result"></td></tr>
-<tr><td>6 мес</td><td class="coef">0.93</td><td class="result"></td></tr>
-<tr><td>9 мес</td><td class="coef">0.90</td><td class="result"></td></tr>
-<tr><td>12 мес</td><td class="coef">0.88</td><td class="result"></td></tr>
-</table>
-</div>
-
-</div>
-
-<!-- нижние кнопки -->
-<div class="bottom-buttons">
-<button id="btnBeznal" class="btn btn-non-cash">ОФОРМИТЬ БЕЗНАЛ</button>
-<button id="btnSmena" class="btn btn-close-shift">ЗАКРЫТИЕ СМЕНЫ</button>
-<button id="btnDiscount" class="btn btn-discount">РЕГИСТРАЦИЯ СКИДОЧНОЙ КАРТЫ</button>
 </div>
 
 <script>
 
-document.getElementById("btnBeznal").onclick=()=>{
-location.href="beznal.html";
+/* пароль */
+const correctPassword="2012";
+
+document.getElementById("loginBtn").onclick=function(){
+const entered=document.getElementById("passwordInput").value;
+if(entered===correctPassword){
+document.getElementById("loginScreen").style.display="none";
+document.getElementById("mainContent").style.display="block";
+}else{
+document.getElementById("errorMsg").textContent="Неверный пароль";
+}
 };
 
-document.getElementById("btnSmena").onclick=()=>{
-location.href="smena.html";
-};
-
-document.getElementById("btnDiscount").onclick=()=>{
-location.href="discount.html";
-};
+document.getElementById("passwordInput").addEventListener("keypress",function(e){
+if(e.key==="Enter"){document.getElementById("loginBtn").click();}
+});
 
 /* расчет */
 document.querySelectorAll('.calculator').forEach(calc=>{
-
-const btn = calc.querySelector('.btn-calc');
-
-btn.onclick = ()=>{
-
+const btn=calc.querySelector('.btn-calc');
+btn.onclick=()=>{
 const sum=parseFloat(calc.querySelector('.sum').value);
-if(!sum) return;
-
+if(!sum)return;
 const coefs=calc.querySelectorAll('.coef');
 const results=calc.querySelectorAll('.result');
-
 coefs.forEach((c,i)=>{
 results[i].textContent=(sum/parseFloat(c.textContent))
 .toLocaleString('ru-RU',{minimumFractionDigits:2,maximumFractionDigits:2});
 });
-
 };
-
 });
 
 </script>
