--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@ table{font-size:13px;}
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">ЭКСИМБАНК</div>
+  <div class="hint">Введите общую сумму чека</div>
 <input type="number" class="input sum">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
 <table>
@@ -286,6 +287,7 @@ table{font-size:13px;}
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">СБЕРБАНК</div>
+  <div class="hint">Введите общую сумму чека</div>
 <input type="number" class="input sum">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
 <table>
@@ -350,3 +352,4 @@ results[i].textContent=(sum/parseFloat(c.textContent))
 
 </body>
 </html>
+
